--- a/task/package.json
+++ b/task/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.14.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
